fix homepage URL

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: rest_data
 description: Easily handle REST API data
 version: 0.0.1
 author: Algonauti
-homepage: http://www.algonauti.com
+homepage: https://www.algonauti.com
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
