--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: rest_data
 description: Easily handle REST API data
 version: 0.0.1
+author: Algonauti <info@algonauti.com>
 homepage: https://www.algonauti.com
 
 environment:
