--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: rest_data
 description: Easily interact with REST APIs without dealing with HTTP and JSON
-version: 0.1.0
+version: 0.1.0+1
 author: Algonauti <info@algonauti.com>
 homepage: https://www.algonauti.com
 
