--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rest_data
 description: Easily interact with REST APIs without dealing with HTTP and JSON
 version: 0.3.3
-author: Algonauti <info@algonauti.com>
+author: Algonauti <devel@algonauti.com>
 homepage: https://www.algonauti.com
 
 environment:
